.github/lean_quality/fixtures/research_legacy_refs/negative/direct/Formal/AG/Research/Basic.lean
def researchBasic : Nat := 0
